Fix typo in Menu project HTML

--- a/My-Project/Menu/index.html
+++ b/My-Project/Menu/index.html
@@ -29,7 +29,7 @@
       <!-- menu items -->
       <div class="section-center">
         <!-- single item -->
-        <!-- <aricle class="menu-item">
+        <!-- <article class="menu-item">
           <img src="menu-item.jpeg" class="photo" alt="menu item">
           <div class="item-info">
             <header>
@@ -40,7 +40,7 @@
                Corrupti, hic. Sint, non nam fuga 
                voluptatibus ratione voluptatem tempora at iste.</p> -->
           </div>
-        </aricle>
+        </article>
         <!-- end single item -->
       </div>
     </section>
